--- a/public/app/views/cadastro.html
+++ b/public/app/views/cadastro.html
@@ -1,6 +1,6 @@
 <div class="row">
     <!-- left column -->
-    <form onsubmit="salvarDados()" id="form_elementos" role="form" name="form_elementos">
+    <form ng-submit="salvar()" id="form_elementos" role="form" name="form_elementos">
         <!--Inicio -- col-md-6-->
         <div class="col-md-6">
             <!-- /.box -->
@@ -14,51 +14,50 @@
                     <!--Selection Input-->
                     <div class="form-group">
                         <label>Data de incubação</label>
-                        <input id="inputData" name="inputData" type="date" class="form-control">
+                        <input ng-model="formulario.data" id="inputData" name="inputData" type="date" class="form-control">
                         <!-- /.input group -->
                     </div>
                     <div class="form-group">
                         <label>Protocolo</label>
-                        <input id="protocolo" type="text" class="form-control">
+                        <input ng-model="formulario.protocolo" id="protocolo" type="text" class="form-control">
                     </div>
                     <div class="form-group">
                         <label>Mercado</label>
-                        <select id="mercado" class="form-control select2" onchange="loadMatPrima()">
-                            <option value="controle">--Selecione--</option>
-                            <option value="m1">Agroindústria</option>
-                            <option value="m2">Cultura energética</option>
-                            <option value="m3">Garantia de qualidade</option>
-                            <option value="m4">Indústria</option>
-                            <option value="m5">Resíduo urbano</option>
+                        <select ng-model="formulario.mercado" id="mercado" class="form-control select2" ng-options="mercado.nome for mercado in mercados">
+                            <option selected value="">--Selecione--</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label>Origem da Matéria Prima</label>
-                        <select id="origem_mp" class="form-control select2" style="width: 100%;" onchange="loadSetor()"></select>
+                        <select ng-model="formulario.materia" id="origem_mp" class="form-control select2" ng-options="materia.nome for materia in materias">
+                            <option selected value="">--Selecione--</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label>Setor</label>
-                        <select id="setor" class="form-control select2" style="width: 100%;" onchange="loadAmostra()"></select>
+                        <select ng-model="formulario.setor" id="setor" class="form-control select2" ng-options="setor.nome for setor in setores">
+                            <option selected value="">--Selecione--</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label>Amostra/fase</label>
-                        <select id="amostra" class="form-control select2" style="width: 100%;">
+                        <select ng-model="formulario.amostra" id="amostra" class="form-control select2" ng-options="amostra.nome for amostra in amostras">
+                            <option selected value="">--Selecione--</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label>Ponto de Coleta</label>
-                        <input id="ponto_coleta" type="text" class="form-control">
-                        </select>
+                        <input ng-model="formulario.ponto" id="ponto_coleta" type="text" class="form-control">
                     </div>
                     <!-- textarea -->
                     <div class="form-group">
                         <label>Informações Complementares</label>
-                        <textarea id="complemento" class="form-control" rows="3" placeholder="Observações ..."></textarea>
+                        <textarea ng-model="formulario.complemento" id="complemento" class="form-control" rows="3" placeholder="Observações ..."></textarea>
                     </div>
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer">
-                    <button type="submit" class="btn btn-success">Submit</button>
+                    <button id="submit" type="submit" class="btn btn-success" ng-disabled="!formulario.data">Submit</button>
                 </div>
             </div>
             <!-- /.box -->
